--- a/src/output.css
+++ b/src/output.css
@@ -7,23 +7,29 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
-    --font-body: : Barlow, sans-serif;
     --color-yellow-500: oklch(79.5% 0.184 86.047);
+    --color-green-200: oklch(92.5% 0.084 155.995);
+    --color-green-300: oklch(87.1% 0.15 154.449);
     --color-cyan-300: oklch(86.5% 0.127 207.078);
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
     --text-lg: 1.125rem;
     --text-lg--line-height: calc(1.75 / 1.125);
+    --text-8xl: 6rem;
+    --text-8xl--line-height: 1;
     --font-weight-black: 900;
     --radius-lg: 0.5rem;
     --default-transition-duration: 150ms;
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    --default-font-family: var(--font-body);
+    --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
     --color-primary-sky: rgb(102,189,249);
     --color-primary-yellow: hsl(51, 100%, 49%);
+    --color-primary-green-dark: hsl(167, 40%, 24%);
+    --color-primary-green: hsl(167, 34%, 41%);
     --color-neutral-white: hsl(0, 100%, 100%);
+    --font-body: : Barlow, sans-serif;
     --font-heading: : Fraunces, serif;
   }
 }
@@ -55,7 +61,6 @@
   h1, h2, h3, h4, h5, h6 {
     font-size: inherit;
     font-weight: inherit;
-    font-family: var(--font-heading)
   }
   a {
     color: inherit;
@@ -189,9 +194,6 @@
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
-  .top-16 {
-    top: calc(var(--spacing) * 16);
-  }
   .top-20 {
     top: calc(var(--spacing) * 20);
   }
@@ -201,11 +203,14 @@
   .z-0 {
     z-index: 0;
   }
-  .mx-10 {
-    margin-inline: calc(var(--spacing) * 10);
+  .mx-8 {
+    margin-inline: calc(var(--spacing) * 8);
   }
   .mx-auto {
     margin-inline: auto;
+  }
+  .mt-20 {
+    margin-top: calc(var(--spacing) * 20);
   }
   .contents {
     display: contents;
@@ -225,14 +230,14 @@
   .h-150 {
     height: calc(var(--spacing) * 150);
   }
-  .w-90 {
-    width: calc(var(--spacing) * 90);
-  }
-  .w-\[80\%\] {
-    width: 80%;
+  .h-full {
+    height: 100%;
   }
   .w-full {
     width: 100%;
+  }
+  .flex-1 {
+    flex: 1;
   }
   .grow {
     flex-grow: 1;
@@ -243,14 +248,23 @@
   .flex-col {
     flex-direction: column;
   }
+  .flex-row {
+    flex-direction: row;
+  }
   .items-center {
     align-items: center;
   }
   .justify-between {
     justify-content: space-between;
   }
+  .gap-3 {
+    gap: calc(var(--spacing) * 3);
+  }
   .gap-4 {
     gap: calc(var(--spacing) * 4);
+  }
+  .gap-5 {
+    gap: calc(var(--spacing) * 5);
   }
   .space-x-6 {
     :where(& > :not(:last-child)) {
@@ -262,11 +276,17 @@
   .rounded-full {
     border-radius: calc(infinity * 1px);
   }
+  .bg-green-200 {
+    background-color: var(--color-green-200);
+  }
+  .bg-green-300 {
+    background-color: var(--color-green-300);
+  }
   .bg-neutral-white {
     background-color: var(--color-neutral-white);
   }
-  .bg-primary-sky {
-    background-color: var(--color-primary-sky);
+  .bg-primary-green {
+    background-color: var(--color-primary-green);
   }
   .bg-primary-yellow {
     background-color: var(--color-primary-yellow);
@@ -277,14 +297,26 @@
   .bg-white {
     background-color: var(--color-white);
   }
+  .bg-\[url\(\'\.\.\/images\/desktop\/image-graphic-design\.jpg\'\)\] {
+    background-image: url('../images/desktop/image-graphic-design.jpg');
+  }
   .bg-\[url\(\'\.\.\/images\/desktop\/image-header\.jpg\'\)\] {
     background-image: url('../images/desktop/image-header.jpg');
+  }
+  .bg-\[url\(\'\.\.\/images\/desktop\/image-photography\.jpg\'\)\] {
+    background-image: url('../images/desktop/image-photography.jpg');
   }
   .bg-cover {
     background-size: cover;
   }
   .bg-center {
     background-position: center;
+  }
+  .fill-current {
+    fill: currentcolor;
+  }
+  .object-center {
+    object-position: center;
   }
   .p-2 {
     padding: calc(var(--spacing) * 2);
@@ -301,14 +333,17 @@
   .px-10 {
     padding-inline: calc(var(--spacing) * 10);
   }
-  .py-1 {
-    padding-block: calc(var(--spacing) * 1);
-  }
   .py-2 {
     padding-block: calc(var(--spacing) * 2);
   }
+  .py-3 {
+    padding-block: calc(var(--spacing) * 3);
+  }
   .py-8 {
     padding-block: calc(var(--spacing) * 8);
+  }
+  .py-10 {
+    padding-block: calc(var(--spacing) * 10);
   }
   .pt-40 {
     padding-top: calc(var(--spacing) * 40);
@@ -322,6 +357,10 @@
   .font-heading {
     font-family: var(--font-heading);
   }
+  .text-8xl {
+    font-size: var(--text-8xl);
+    line-height: var(--tw-leading, var(--text-8xl--line-height));
+  }
   .text-lg {
     font-size: var(--text-lg);
     line-height: var(--tw-leading, var(--text-lg--line-height));
@@ -330,8 +369,14 @@
     --tw-font-weight: var(--font-weight-black);
     font-weight: var(--font-weight-black);
   }
+  .text-\[\#2C7566\] {
+    color: #2C7566;
+  }
   .text-black {
     color: var(--color-black);
+  }
+  .text-primary-green-dark {
+    color: var(--color-primary-green-dark);
   }
   .text-white {
     color: var(--color-white);
@@ -359,12 +404,6 @@
     &::after {
       content: var(--tw-content);
       bottom: -2px;
-    }
-  }
-  .after\:bottom-\[-4px\] {
-    &::after {
-      content: var(--tw-content);
-      bottom: -4px;
     }
   }
   .after\:left-\[-10\%\] {
@@ -430,10 +469,10 @@
       content: var(--tw-content);
     }
   }
-  .hover\:bg-cyan-300 {
+  .hover\:text-white {
     &:hover {
       @media (hover: hover) {
-        background-color: var(--color-cyan-300);
+        color: var(--color-white);
       }
     }
   }
