--- a/src/output.css
+++ b/src/output.css
@@ -8,18 +8,23 @@
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
     --color-yellow-500: oklch(79.5% 0.184 86.047);
-    --color-green-200: oklch(92.5% 0.084 155.995);
     --color-green-300: oklch(87.1% 0.15 154.449);
-    --color-cyan-300: oklch(86.5% 0.127 207.078);
+    --color-blue-100: oklch(93.2% 0.032 255.585);
+    --color-blue-200: oklch(88.2% 0.059 254.128);
+    --color-gray-400: oklch(70.7% 0.022 261.325);
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
     --text-lg: 1.125rem;
     --text-lg--line-height: calc(1.75 / 1.125);
+    --text-2xl: 1.5rem;
+    --text-2xl--line-height: calc(2 / 1.5);
+    --text-3xl: 1.875rem;
+    --text-3xl--line-height: calc(2.25 / 1.875);
+    --text-4xl: 2.25rem;
+    --text-4xl--line-height: calc(2.5 / 2.25);
     --text-6xl: 3.75rem;
     --text-6xl--line-height: 1;
-    --text-8xl: 6rem;
-    --text-8xl--line-height: 1;
     --font-weight-black: 900;
     --radius-lg: 0.5rem;
     --default-transition-duration: 150ms;
@@ -29,9 +34,9 @@
     --color-primary-sky: rgb(102,189,249);
     --color-primary-yellow: hsl(51, 100%, 49%);
     --color-primary-green-dark: hsl(167, 40%, 24%);
-    --color-primary-green: hsl(167, 34%, 41%);
+    --color-primary-blue-dark: hsl(198, 62%, 26%);
+    --color-neutral-grey-550: hsl(232, 10%, 55%);
     --color-neutral-white: hsl(0, 100%, 100%);
-    --font-body: : Barlow, sans-serif;
     --font-heading: : Fraunces, serif;
   }
 }
@@ -196,50 +201,26 @@
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
-  .top-1\/2 {
-    top: calc(1/2 * 100%);
-  }
-  .top-2\/6 {
-    top: calc(2/6 * 100%);
-  }
   .top-20 {
     top: calc(var(--spacing) * 20);
   }
   .bottom-1\/5 {
     bottom: calc(1/5 * 100%);
   }
-  .bottom-3 {
-    bottom: calc(var(--spacing) * 3);
-  }
-  .bottom-6 {
-    bottom: calc(var(--spacing) * 6);
-  }
   .left-0 {
     left: calc(var(--spacing) * 0);
-  }
-  .left-1\/2 {
-    left: calc(1/2 * 100%);
   }
   .z-0 {
     z-index: 0;
   }
-  .m-6 {
-    margin: calc(var(--spacing) * 6);
-  }
-  .m-auto {
-    margin: auto;
-  }
-  .mx-2 {
-    margin-inline: calc(var(--spacing) * 2);
+  .mx-0 {
+    margin-inline: calc(var(--spacing) * 0);
   }
   .mx-8 {
     margin-inline: calc(var(--spacing) * 8);
   }
   .mx-10 {
     margin-inline: calc(var(--spacing) * 10);
-  }
-  .mx-20 {
-    margin-inline: calc(var(--spacing) * 20);
   }
   .mx-auto {
     margin-inline: auto;
@@ -265,74 +246,29 @@
   .table {
     display: table;
   }
-  .h-1\/2 {
-    height: calc(1/2 * 100%);
-  }
   .h-150 {
     height: calc(var(--spacing) * 150);
-  }
-  .h-\[25vw\] {
-    height: 25vw;
-  }
-  .h-\[30lv\] {
-    height: 30lv;
-  }
-  .h-\[30lvh\] {
-    height: 30lvh;
-  }
-  .h-\[30lw\] {
-    height: 30lw;
   }
   .h-\[30vw\] {
     height: 30vw;
   }
-  .h-\[50lvh\] {
-    height: 50lvh;
-  }
   .h-full {
     height: 100%;
   }
-  .min-h-20 {
-    min-height: calc(var(--spacing) * 20);
+  .h-max {
+    height: max-content;
   }
-  .min-h-32 {
-    min-height: calc(var(--spacing) * 32);
+  .w-5\/6 {
+    width: calc(5/6 * 100%);
   }
-  .w-1\/2 {
-    width: calc(1/2 * 100%);
-  }
-  .w-1\/3 {
-    width: calc(1/3 * 100%);
-  }
-  .w-2\/3 {
-    width: calc(2/3 * 100%);
-  }
-  .w-2\/5 {
-    width: calc(2/5 * 100%);
-  }
-  .w-4\/5 {
-    width: calc(4/5 * 100%);
-  }
-  .w-\[80vw\] {
-    width: 80vw;
-  }
-  .w-\[100vw\] {
-    width: 100vw;
+  .w-auto {
+    width: auto;
   }
   .w-full {
     width: 100%;
   }
-  .max-w-max {
-    max-width: max-content;
-  }
   .flex-1 {
     flex: 1;
-  }
-  .flex-2 {
-    flex: 2;
-  }
-  .flex-3 {
-    flex: 3;
   }
   .flex-4 {
     flex: 4;
@@ -340,22 +276,20 @@
   .grow {
     flex-grow: 1;
   }
-  .-translate-x-1\/2 {
-    --tw-translate-x: calc(calc(1/2 * 100%) * -1);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .-translate-y-1\/2 {
-    --tw-translate-y: calc(calc(1/2 * 100%) * -1);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
   .transform {
     transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
   }
   .flex-col {
     flex-direction: column;
   }
+  .flex-col-reverse {
+    flex-direction: column-reverse;
+  }
   .flex-row {
     flex-direction: row;
+  }
+  .flex-wrap {
+    flex-wrap: wrap;
   }
   .items-center {
     align-items: center;
@@ -363,11 +297,8 @@
   .justify-between {
     justify-content: space-between;
   }
-  .justify-center {
-    justify-content: center;
-  }
-  .gap-3 {
-    gap: calc(var(--spacing) * 3);
+  .gap-2 {
+    gap: calc(var(--spacing) * 2);
   }
   .gap-4 {
     gap: calc(var(--spacing) * 4);
@@ -375,17 +306,14 @@
   .gap-5 {
     gap: calc(var(--spacing) * 5);
   }
+  .gap-6 {
+    gap: calc(var(--spacing) * 6);
+  }
   .gap-8 {
     gap: calc(var(--spacing) * 8);
   }
   .gap-9 {
     gap: calc(var(--spacing) * 9);
-  }
-  .gap-12 {
-    gap: calc(var(--spacing) * 12);
-  }
-  .gap-20 {
-    gap: calc(var(--spacing) * 20);
   }
   .gap-32 {
     gap: calc(var(--spacing) * 32);
@@ -403,17 +331,11 @@
   .rounded-full {
     border-radius: calc(infinity * 1px);
   }
-  .bg-green-200 {
-    background-color: var(--color-green-200);
-  }
   .bg-green-300 {
     background-color: var(--color-green-300);
   }
   .bg-neutral-white {
     background-color: var(--color-neutral-white);
-  }
-  .bg-primary-green {
-    background-color: var(--color-primary-green);
   }
   .bg-primary-yellow {
     background-color: var(--color-primary-yellow);
@@ -424,14 +346,8 @@
   .bg-white {
     background-color: var(--color-white);
   }
-  .bg-\[url\(\'\.\.\/images\/desktop\/image-graphic-design\.jpg\'\)\] {
-    background-image: url('../images/desktop/image-graphic-design.jpg');
-  }
   .bg-\[url\(\'\.\.\/images\/desktop\/image-header\.jpg\'\)\] {
     background-image: url('../images/desktop/image-header.jpg');
-  }
-  .bg-\[url\(\'\.\.\/images\/desktop\/image-photography\.jpg\'\)\] {
-    background-image: url('../images/desktop/image-photography.jpg');
   }
   .bg-cover {
     background-size: cover;
@@ -451,9 +367,6 @@
   .p-4 {
     padding: calc(var(--spacing) * 4);
   }
-  .px-3 {
-    padding-inline: calc(var(--spacing) * 3);
-  }
   .px-5 {
     padding-inline: calc(var(--spacing) * 5);
   }
@@ -466,29 +379,23 @@
   .py-2 {
     padding-block: calc(var(--spacing) * 2);
   }
-  .py-3 {
-    padding-block: calc(var(--spacing) * 3);
-  }
   .py-8 {
     padding-block: calc(var(--spacing) * 8);
-  }
-  .py-10 {
-    padding-block: calc(var(--spacing) * 10);
   }
   .py-20 {
     padding-block: calc(var(--spacing) * 20);
   }
+  .pt-16 {
+    padding-top: calc(var(--spacing) * 16);
+  }
   .pt-40 {
     padding-top: calc(var(--spacing) * 40);
   }
+  .pb-8 {
+    padding-bottom: calc(var(--spacing) * 8);
+  }
   .text-center {
     text-align: center;
-  }
-  .align-baseline {
-    vertical-align: baseline;
-  }
-  .align-bottom {
-    vertical-align: bottom;
   }
   .align-middle {
     vertical-align: middle;
@@ -496,13 +403,21 @@
   .font-heading {
     font-family: var(--font-heading);
   }
+  .text-2xl {
+    font-size: var(--text-2xl);
+    line-height: var(--tw-leading, var(--text-2xl--line-height));
+  }
+  .text-3xl {
+    font-size: var(--text-3xl);
+    line-height: var(--tw-leading, var(--text-3xl--line-height));
+  }
+  .text-4xl {
+    font-size: var(--text-4xl);
+    line-height: var(--tw-leading, var(--text-4xl--line-height));
+  }
   .text-6xl {
     font-size: var(--text-6xl);
     line-height: var(--tw-leading, var(--text-6xl--line-height));
-  }
-  .text-8xl {
-    font-size: var(--text-8xl);
-    line-height: var(--tw-leading, var(--text-8xl--line-height));
   }
   .text-lg {
     font-size: var(--text-lg);
@@ -512,11 +427,20 @@
     --tw-font-weight: var(--font-weight-black);
     font-weight: var(--font-weight-black);
   }
-  .text-\[\#2C7566\] {
-    color: #2C7566;
-  }
   .text-black {
     color: var(--color-black);
+  }
+  .text-gray-400 {
+    color: var(--color-gray-400);
+  }
+  .text-neutral-grey-550 {
+    color: var(--color-neutral-grey-550);
+  }
+  .text-neutral-white {
+    color: var(--color-neutral-white);
+  }
+  .text-primary-blue-dark {
+    color: var(--color-primary-blue-dark);
   }
   .text-primary-green-dark {
     color: var(--color-primary-green-dark);
@@ -526,6 +450,9 @@
   }
   .uppercase {
     text-transform: uppercase;
+  }
+  .opacity-90 {
+    opacity: 90%;
   }
   .outline {
     outline-style: var(--tw-outline-style);
@@ -612,6 +539,34 @@
       content: var(--tw-content);
     }
   }
+  .hover\:bg-blue-100 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-blue-100);
+      }
+    }
+  }
+  .hover\:bg-blue-200 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-blue-200);
+      }
+    }
+  }
+  .hover\:bg-primary-sky {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-primary-sky);
+      }
+    }
+  }
+  .hover\:text-neutral-white {
+    &:hover {
+      @media (hover: hover) {
+        color: var(--color-neutral-white);
+      }
+    }
+  }
   .hover\:text-white {
     &:hover {
       @media (hover: hover) {
@@ -639,35 +594,26 @@
       display: none;
     }
   }
-}
-.fancy-underline {
-  position: relative;
-}
-.fancy-underline:hover::after {
-  content: "";
-  position: absolute;
-  left: -10%;
-  bottom: -2px;
-  width: 120%;
-  height: 8px;
-  border-radius: 8px;
-  transition: width 0.3s ease-in-out;
-  z-index: -1;
-}
-@property --tw-translate-x {
-  syntax: "*";
-  inherits: false;
-  initial-value: 0;
-}
-@property --tw-translate-y {
-  syntax: "*";
-  inherits: false;
-  initial-value: 0;
-}
-@property --tw-translate-z {
-  syntax: "*";
-  inherits: false;
-  initial-value: 0;
+  .sm\:w-2\/5 {
+    @media (width >= 40rem) {
+      width: calc(2/5 * 100%);
+    }
+  }
+  .sm\:w-4\/5 {
+    @media (width >= 40rem) {
+      width: calc(4/5 * 100%);
+    }
+  }
+  .sm\:flex-row {
+    @media (width >= 40rem) {
+      flex-direction: row;
+    }
+  }
+  .sm\:justify-center {
+    @media (width >= 40rem) {
+      justify-content: center;
+    }
+  }
 }
 @property --tw-rotate-x {
   syntax: "*";
@@ -724,9 +670,6 @@
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
-      --tw-translate-x: 0;
-      --tw-translate-y: 0;
-      --tw-translate-z: 0;
       --tw-rotate-x: initial;
       --tw-rotate-y: initial;
       --tw-rotate-z: initial;
