--- a/src/output.css
+++ b/src/output.css
@@ -9,8 +9,6 @@
       "Courier New", monospace;
     --color-yellow-500: oklch(79.5% 0.184 86.047);
     --color-green-300: oklch(87.1% 0.15 154.449);
-    --color-blue-100: oklch(93.2% 0.032 255.585);
-    --color-blue-200: oklch(88.2% 0.059 254.128);
     --color-gray-400: oklch(70.7% 0.022 261.325);
     --color-black: #000;
     --color-white: #fff;
@@ -37,7 +35,7 @@
     --color-primary-blue-dark: hsl(198, 62%, 26%);
     --color-neutral-grey-550: hsl(232, 10%, 55%);
     --color-neutral-white: hsl(0, 100%, 100%);
-    --font-heading: : Fraunces, serif;
+    --font-heading: Fraunces, serif;
   }
 }
 @layer base {
@@ -288,9 +286,6 @@
   .flex-row {
     flex-direction: row;
   }
-  .flex-wrap {
-    flex-wrap: wrap;
-  }
   .items-center {
     align-items: center;
   }
@@ -537,20 +532,6 @@
     &::after {
       --tw-content: '';
       content: var(--tw-content);
-    }
-  }
-  .hover\:bg-blue-100 {
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-blue-100);
-      }
-    }
-  }
-  .hover\:bg-blue-200 {
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-blue-200);
-      }
     }
   }
   .hover\:bg-primary-sky {
